<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context="com.ull.project.mobiletriageapp_start.Activity_Info_Tag">
<RelativeLayout
    android:id="@+id/nottoolbarview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tool_bar"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_nav_logo_title"
        android:scaleType="fitStart"
        tools:ignore="ContentDescription" />

</RelativeLayout>
<ScrollView
    android:id="@+id/scrollview_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/nottoolbarview"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/linear_layout_1_info_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_label_colour_info_tag"
            style="@style/App_LabelTextView"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_Info_TagContent" />

        <TextView
            android:id="@+id/textview_id_info_tag"
            style="@style/App_TextView"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/txt_Title_Id_Tag"/>

        <LinearLayout
            android:id="@+id/linear_layout_2_info_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_read_info_tag"
                style="@style/App_ViewButton_Style"
                android:text="@string/txt_ReadTagNFC" />
            <Button
                android:id="@+id/button_check_info_tag"
                style="@style/App_ViewButton_Style"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/txt_State_Tag"
                android:enabled="false"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_msg_to_send_result_info_tag"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:visibility="invisible"
            android:textStyle="italic"
            style="@style/App_TextView"/>

        <RelativeLayout
            android:id="@+id/relative_layout_toast_info_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></RelativeLayout>

    </LinearLayout>
</ScrollView>

<Button
    style="@style/App_ViewButtonMain_Style"
    android:id="@+id/bt_main_info_tag"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"/>

</RelativeLayout>